--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,15 @@
   padding: 0;
   font-weight: 300;
 }
+li{
+  color:cyan;
+}
+
+ul {
+  list-style-type:none;
+}
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  color: white;
   font-weight: 300;
   background-image: url(../img.jpg);
 }
