--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,11 @@
   padding: 0;
   font-weight: 300;
 }
-li{
-  color:cyan;
+
+.list_channels {
+  color:#EADE80;
+  font-style: italic;
+  font-weight: bold;
 }
 
 ul {
@@ -15,6 +18,7 @@ ul {
 body {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
+  color: white;
   background-image: url(../img.jpg);
 }
 body ::-webkit-input-placeholder {
@@ -44,20 +48,29 @@ body :-ms-input-placeholder {
   font-weight: 300;
 }
 
+
+hr {
+  width: 200px;
+  color:grey;
+  margin: 0 auto;
+}
+
+
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   max-width: 400px;
   margin: auto;
   margin-top: 100px;
-  padding: 80px 0;
   height: 400px;
   text-align: center;
   border-radius: 8px;
+  border: 1px solid white;
   background-color: rgba(46, 55, 64, 0.7);
 }
 .container h1 {
-  color: #2DFF42;
+  color: white;
   font-size: 40px;
   -webkit-transition-duration: 1s;
           transition-duration: 1s;
@@ -65,6 +78,8 @@ body :-ms-input-placeholder {
           transition-timing-function: ease-in-put;
   font-weight: 200;
 }
+
+
 form {
   padding: 20px 0;
   position: relative;
@@ -83,7 +98,7 @@ form input {
   margin: 0 auto 10px auto;
   display: block;
   text-align: center;
-  font-size: 18px;
+  font-size: 15px;
   color: white;
   -webkit-transition-duration: 0.25s;
           transition-duration: 0.25s;
